<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/addFavourite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/tvDayOfWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/monday"
            android:fontFamily="@font/font_regular"
            android:textSize="14sp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imgConditionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/img"
            android:background="@drawable/partlysunny_3x"/>

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:fontFamily="@font/font_bold"
            android:textSize="14sp"
            android:hint="@string/_20"
            android:textColor="@color/white"
            android:textAllCaps="true" />

    </LinearLayout>

</RelativeLayout>